Fix form id duplication error
Refine style of dialog content in scrollbar

--- a/src/index.less
+++ b/src/index.less
@@ -42,10 +42,4 @@ body {
   .ant-tabs-tab {
     margin: 0 16px 0 0!important;
   }
-  .ant-drawer-body {
-    .ant-row {
-      margin-left: 0!important;
-      margin-right: 0!important;
-    }
-  }
 }
