--- a/src/utils/utils.less
+++ b/src/utils/utils.less
@@ -48,3 +48,12 @@
     height: 0;
   }
 }
+
+.scrollBar {
+  >div:global {
+    >.ant-row {
+      margin-left: 0!important;
+      margin-right: 0!important;
+    }
+  }
+}
